places-bookmarks: Don't crash if page has no text

https://bugzilla.gnome.org/show_bug.cgi?id=738015